Fixed: Tabs: Overflowing max nesting level (#627)

--- a/src/styles/themes/compact/sidebar/tab.styl
+++ b/src/styles/themes/compact/sidebar/tab.styl
@@ -39,6 +39,9 @@
   z-index: 10
   transition: transform var(--d-fast), opacity var(--d-fast), padding var(--d-fast)
 
+  padding-left: calc(var(--tabs-indent) * 16)
+  &[data-lvl="0"]
+    padding-left: 0
   &[data-lvl="1"]
     padding-left: var(--tabs-indent)
   &[data-lvl="2"]
@@ -63,6 +66,12 @@
     padding-left: calc(var(--tabs-indent) * 11)
   &[data-lvl="12"]
     padding-left: calc(var(--tabs-indent) * 12)
+  &[data-lvl="13"]
+    padding-left: calc(var(--tabs-indent) * 13)
+  &[data-lvl="14"]
+    padding-left: calc(var(--tabs-indent) * 14)
+  &[data-lvl="15"]
+    padding-left: calc(var(--tabs-indent) * 15)
   
   &[data-loading="true"]
     cursor: progress
@@ -108,7 +117,7 @@
     content: ''
     position: absolute
     display: none
-    top: -5px
+    top: -1px
     left: calc(var(--tabs-indent) - 3px)
     width: 1px
     height: calc(100% + 1px)
@@ -148,7 +157,7 @@
 .Tab[data-pin="true"] .body
   justify-content: center
 
-#root[data-tabs-tree-lvl-marks="true"] .Tab[data-pin="false"] .body:after
+#root[data-tabs-tree-lvl-marks="true"] .Tab[data-pin="false"]:not([data-lvl="0"]) .body:after
   display: block
   box-shadow: calc(var(--tabs-indent) * -1) 0 0 0 var(--frame-fg),
               calc(var(--tabs-indent) * -2) 0 0 0 var(--frame-fg),
@@ -161,7 +170,11 @@
               calc(var(--tabs-indent) * -9) 0 0 0 var(--frame-fg),
               calc(var(--tabs-indent) * -10) 0 0 0 var(--frame-fg),
               calc(var(--tabs-indent) * -11) 0 0 0 var(--frame-fg),
-              calc(var(--tabs-indent) * -12) 0 0 0 var(--frame-fg)
+              calc(var(--tabs-indent) * -12) 0 0 0 var(--frame-fg),
+              calc(var(--tabs-indent) * -13) 0 0 0 var(--frame-fg),
+              calc(var(--tabs-indent) * -14) 0 0 0 var(--frame-fg),
+              calc(var(--tabs-indent) * -15) 0 0 0 var(--frame-fg),
+              calc(var(--tabs-indent) * -16) 0 0 0 var(--frame-fg)
 
 #root[data-drag="true"] .Tab
   animation: drag-hover-fix .1s
